tests/fixtures/invalid/scalar_array_field_pointer_ordering_different_arrays.c
struct Packet {
    int values[2];
};

int main(void) {
    struct Packet left = {{1, 2}};
    struct Packet right = {{3, 4}};
    return left.values < right.values;
}
